syntax = "proto3";
package ethermint.intrarelayer.v1;

import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";
import "ethermint/intrarelayer/v1/intrarelayer.proto";

option go_package = "github.com/functionx/fx-core/x/intrarelayer/types";

// GenesisState defines the module's genesis state.
message GenesisState {
    // module parameters
    Params params = 1 [(gogoproto.nullable) = false];
    // registered token pairs
    repeated TokenPair token_pairs = 2 [(gogoproto.nullable) = false];
}

// Params defines the intrarelayer module params
message Params {
    // parameter to enable the intrarelaying of Cosmos coins <--> FIP20 tokens.
    bool enable_intrarelayer = 1;
    // parameter to enable the EVM hook to convert an FIP20 token to a Cosmos
    // Coin by transferring the Tokens through a MsgEthereumTx to the
    // ModuleAddress Ethereum address.
    bool enable_evm_hook = 2 [(gogoproto.customname) = "EnableEVMHook"];
    // ibc transfer timeout height
    uint64 ibc_transfer_timeout_height = 3;
}